--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../client/image/melhemlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/image/melhemlogo.png" type="image/x-icon">
     <title>Məlhəm Hospital</title>
   </head>
   <body>
